--- a/projects/reinforcement_learning/config.yml
+++ b/projects/reinforcement_learning/config.yml
@@ -2,7 +2,7 @@
 # Configuration for Reinforcement Learning #
 ############################################
 
-random_seed: 192837461
+random_seed: 31886
 
 # Directory to save the frames to create a video.
 dirs:
@@ -20,16 +20,16 @@ trainer:
 
 # Deep Q-Learning 
 optimizer:
-  num_boosters: 4
+  num_boosters: 1
   num_simulation_steps: 600
   num_thrust_levels: 2  # Thrust levels of engines. Minimum is 2 for on/off
   num_thrust_angles: 2  # Thrust angles of engines.
-  learning_rate: 1.0e-4
-  batch_size: 4096
+  learning_rate: 3.0e-4
+  batch_size: 128
   num_epochs: 1
-  memory_size: 1200
-  gamma: 0.98    # test gamma between 0.8 and 0.99
-  decay_rate: 0.002
+  memory_size: 8000
+  gamma: 0.90    # test gamma between 0.8 and 0.99
+  decay_rate: 0.004
   epsilon_max: 0.9     # Epsilon-greedy value.
   epsilon_min: 0.1     # Minimal epsilon-greedy value.
   lib: "torch"    # NOTE: This is fix.
@@ -68,7 +68,7 @@ env:
 
     init:
       position: # [m]
-        x: 80.0
+        x: 70.0
         y: 400.0
       linear_velocity: # [m / s]
         x: 0.0
@@ -86,17 +86,17 @@ env:
 
     noise:  # TODO: move this to env?
       position: # [m] 
-        x: 30.0                       # Standard deviation [m]
-        y: 30.0                       # Standard deviation [m]
+        x: 1.0                       # Standard deviation [m]
+        y: 1.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
-        x: 0.0                        # Standard deviation [m / s]
-        y: 0.0                        # Standard deviation [m / s]
+        x: 1.0                        # Standard deviation [m / s]
+        y: 1.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
       angle: 0.0                      # Standard deviation [deg]
 
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle.
-      num_dim_out: 6      # Predictions of thrust and angle for three engines.
+      # num_dim_out: 6      # Predictions of thrust and angle for three engines.
       num_dim_hidden: 32
       num_hidden_layers: 3
 
