--- a/projects/reinforcement_learning/config.yml
+++ b/projects/reinforcement_learning/config.yml
@@ -2,7 +2,7 @@
 # Configuration for Reinforcement Learning #
 ############################################
 
-random_seed: 21886
+random_seed: 219568
 
 # Directory to save the frames to create a video.
 dirs:
@@ -21,15 +21,15 @@ trainer:
 # Deep Q-Learning 
 optimizer:
   num_boosters: 1
-  num_simulation_steps: 600
-  num_thrust_levels: 2  # Thrust levels of engines. Minimum is 2 for on/off
+  num_simulation_steps: 1000
+  num_thrust_levels: 1  # Thrust levels of engines. 
   num_thrust_angles: 2  # Thrust angles of engines.
-  learning_rate: 1.0e-4
+  learning_rate: 1.0e-5
   batch_size: 128
   num_epochs: 1
   memory_size: 2000
-  gamma: 0.98    # test gamma between 0.8 and 0.99
-  decay_rate: 0.002
+  gamma: 0.8    # test gamma between 0.8 and 0.99
+  decay_rate: 0.001
   epsilon_max: 0.9     # Epsilon-greedy value.
   epsilon_min: 0.1     # Minimal epsilon-greedy value.
   lib: "torch"    # NOTE: This is fix.
@@ -51,7 +51,7 @@ env:
 
   landing_pad:
     position: # [m]
-      x: 0.0
+      x: -100.0
       y: 0.0
 
   landing:
@@ -68,11 +68,11 @@ env:
 
     init:
       position: # [m]
-        x: 0.0
+        x: 100.0
         y: 400.0
       linear_velocity: # [m / s]
         x: 0.0
-        y: -20.0
+        y: -40.0
       angular_velocity: 0.0   # [deg / s], counterclockwise for positive numbers
       angle: 0.0              # [deg] counterclockwise
 
@@ -87,10 +87,10 @@ env:
     noise:  # TODO: move this to env?
       position: # [m] 
         x: 50.0                       # Standard deviation [m]
-        y: 20.0                       # Standard deviation [m]
+        y: 30.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
-        x: 10.0                        # Standard deviation [m / s]
-        y: 10.0                        # Standard deviation [m / s]
+        x: 5.0                        # Standard deviation [m / s]
+        y: 5.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
       angle: 0.0                      # Standard deviation [deg]
 
