Update RL method.

--- a/projects/deep_q_learning/config.yml
+++ b/projects/deep_q_learning/config.yml
@@ -2,7 +2,7 @@
 # Configuration for (Asynchronous) Reinforcement Learning #
 ###########################################################
 
-random_seed: 42111
+random_seed: 53999902
 
 # Directory to save the frames to create a video.
 dirs:
@@ -20,16 +20,16 @@ trainer:
 # Deep Q-Learning 
 optimizer:
   num_boosters: 1
-  num_simulation_steps: 600
+  num_simulation_steps: 500
   num_thrust_levels: 2  # Thrust levels of engines. 
-  num_thrust_angles: 3  # Thrust angles of engines.
+  num_thrust_angles: 2  # Thrust angles of engines.
   learning_rate: 0.0003
-  batch_size: 128
-  memory_size: 100000
+  batch_size: 4096
+  memory_size: 200000
   gamma: 0.95           # Discount rate
   epsilon: 1.0          # Epsilon-greedy value.
   epsilon_min: 0.01     # Minimal epsilon-greedy value.
-  epsilon_decay: 0.9999
+  epsilon_decay: 0.99999
   num_warmup_steps: 100000
   lib: "torch"    # NOTE: This is fix.
 
@@ -43,9 +43,9 @@ env:
     y: -9.81
 
   domain: # [m]
-    x_min: -200.0
-    x_max: 200.0
-    y_max: 500.0
+    x_min: -150.0
+    x_max: 150.0
+    y_max: 450.0
     y_min: -10.0
 
   landing_pad:
@@ -68,10 +68,10 @@ env:
     init:
       position: # [m]
         x: 70.0
-        y: 300.0
+        y: 350.0
       linear_velocity: # [m / s]
         x: 0.0
-        y: -40.0
+        y: -50.0
       angular_velocity: 0.0   # [deg / s], counterclockwise for positive numbers
       angle: 0.0              # [deg] counterclockwise
 
@@ -88,7 +88,7 @@ env:
         x: 50.0                       # Standard deviation [m]
         y: 50.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
-        x: 10.0                        # Standard deviation [m / s]
+        x: 0.0                        # Standard deviation [m / s]
         y: 10.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
       angle: 0.0                      # Standard deviation [deg]
