--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -2,30 +2,30 @@
 # Configuration for Evolution Strategies #
 ##########################################
 
-random_seed: 11131
-
-# Directory to save the frames to create a video.
-dirs:
-  frames: "frames"
-
-# Parameters to save the booster's neural network.
-checkpoints:
-  load_model: false
-  save_model: false
-  model_path: "weights"
-
-trainer:
-  num_generations: -1  # -1 for infinite generations or positive integer.
+random_seed: 42
 
 # Evolution strategies 
 optimizer:
-  num_boosters: 32
+  num_boosters: 8
   num_simulation_steps: 500
   learning_rate: 0.2
   standard_deviation: 0.8  # Standard deviation of samples around current parameters.
   noise_probability: 1.0  # Allows for sparse noise.
   momentum: 0.99  # NOT IN USE
   lib: "numpy" 
+
+trainer:
+  num_episodes: -1  # -1 for infinite episodes or positive integer.
+
+# Directory to save the frames to create a video.
+dirs:
+  frames: "frames"
+
+# Save or load pre-trained neural network.
+checkpoints:
+  load_model: false
+  save_model: false
+  model_path: "weights"
 
 # Simulation environment 
 env:
@@ -83,15 +83,15 @@ env:
         y: 20.0                       # Standard deviation [m]
       linear_velocity: # [m/s]
         x: 5.0                        # Standard deviation [m / s]
-        y: 20.0                        # Standard deviation [m / s]
+        y: 5.0                        # Standard deviation [m / s]
       angular_velocity: 0.0             # Standard deviation [deg / s]
       angle: 0.0                      # Standard deviation [deg]
 
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle.
       num_dim_out: 6      # Predictions of thrust and angle for three engines.
-      num_dim_hidden: 16
-      num_hidden_layers: 3
+      num_dim_hidden: 64
+      num_hidden_layers: 2
 
 framework:
   screen:
