--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -78,6 +78,8 @@ env:
         max_angle: 15.0  # [deg]
 
     noise:  # TODO: move this to env?
+      # "identical" or "different". Whether every agent gets the same starting noise.
+      type: "identical"
       position: # [m] 
         x: 40.0                       # Standard deviation [m]
         y: 20.0                       # Standard deviation [m]
