--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -83,6 +83,7 @@ env:
 
     noise:  # TODO: move this to env?
       # "identical" or "different". Whether every agent gets the same starting noise.
+      is_activated: true
       type: "identical"
       position: # [m] 
         x: 0.0                       # Standard deviation [m]
