--- a/projects/deep_q_learning/config.yml
+++ b/projects/deep_q_learning/config.yml
@@ -67,12 +67,14 @@ env:
       angle: 0.0              # [deg] counterclockwise
 
     engine:
-      main: # Merlin engine
-        max_force: 854000.0  # [N] 854 kN at sea level
-        max_angle: 20.0  # [deg] Gimbal angle, about ~15 degrees for Falcon 9
-      cold_gas:  # Cold gas propulsion system.
-        max_force: 100000.0  # [N]
-        max_angle: 10.0  # [deg]
+      # Merlin engine. 854 kN thrust at sea level. Gimbal angle, about ~15 degrees.
+      main: 
+        max_force: 854000.0  # [N]
+        max_angle: 20.0      # [deg]
+      # Cold gas propulsion system.
+      cold_gas:
+        max_force: 50000.0   # [N]
+        max_angle: 10.0      # [deg]
 
     noise:  # TODO: move this to env?
       # "identical" or "different". Whether every agent gets the same starting noise.
