--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -56,11 +56,11 @@ env:
       position: # [m]
         x: 70.0
         y: 400.0
-      linear_velocity: # [m/s]
+      linear_velocity: # [m / s]
         x: 0.0
         y: -50.0
-      angular_velocity: 0.0   # [deg / s], counterclockwise for positive numbers
-      angle: 0.0              # [deg] counterclockwise
+      angular_velocity: 0.0  # [deg / s], counterclockwise for positive numbers
+      angle: 0.0  # [deg] counterclockwise
 
     engine:
       main: # Merlin engine
@@ -70,18 +70,19 @@ env:
         max_force: 100000.0  # [N]
         max_angle: 30.0  # [deg]
 
-    noise:  # TODO: move this to env?
-      # "identical" or "different". Whether every agent gets the same starting noise.
+    noise:
+      # Specifies standard deviation of Gaussian noise added to agents initial state.
       is_activated: true
+      # Specifies whether every agent gets the same starting noise: "identical" or "different"
       type: "identical"
-      position: # [m] 
-        x: 0.0                       # Standard deviation [m]
-        y: 0.0                       # Standard deviation [m]
-      linear_velocity: # [m/s]
-        x: 0.0                        # Standard deviation [m / s]
-        y: 0.0                        # Standard deviation [m / s]
-      angular_velocity: 0.0             # Standard deviation [deg / s]
-      angle: 0.0                      # Standard deviation [deg]
+      position: # [m]
+        x: 0.0
+        y: 0.0
+      linear_velocity: # [m / s]
+        x: 0.0
+        y: 0.0
+      angular_velocity: 0.0  # [deg / s]
+      angle: 0.0  # [deg]
 
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle.
