--- a/projects/deep_q_learning/config.yml
+++ b/projects/deep_q_learning/config.yml
@@ -2,7 +2,7 @@
 # Configuration for (asynchronous) reinforcement learning #
 ###########################################################
 
-random_seed: 42
+random_seed: 420
 
 # Deep Q-Learning 
 optimizer:
@@ -18,7 +18,7 @@ optimizer:
   epsilon_min: 0.01     # Minimal epsilon-greedy value.
   epsilon_decay: 0.9999
   num_warmup_steps: 100000
-  lib: "torch"    # Fix.
+  lib: "torch"
 
 trainer:
   num_episodes: -1  # -1 for infinite generations or positive integer
@@ -91,7 +91,6 @@ env:
 
     neural_network: # model
       num_dim_in: 6       # Position, linear velocity, angular velocity, angle.
-      # num_dim_out: 6      # Predictions of thrust and angle for three engines.
       num_dim_hidden: 256
       num_hidden_layers: 2
 
