--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -10,7 +10,7 @@ optimizer:
   num_simulation_steps: 500
   learning_rate: 0.2
   standard_deviation: 0.8  # Standard deviation of samples around current parameters.
-  lib: "numpy"  # Fix.
+  lib: "numpy"
 
 trainer:
   num_episodes: -1  # -1 for infinite episodes or positive integer.
