--- a/projects/genetic_optimization/config.yml
+++ b/projects/genetic_optimization/config.yml
@@ -10,7 +10,7 @@ optimizer:
   num_simulation_steps: 500
   mutation_probability: 0.08
   mutation_rate: 0.03
-  lib: "numpy"  # Fix.
+  lib: "numpy"
 
 trainer:
   num_episodes: -1  # -1 for infinite episodes or positive integer.
