Refactor model saving and loading.

--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -106,6 +106,7 @@ dirs:
 
 # Save or load pre-trained neural network.
 checkpoints:
-  load_model: false
-  save_model: false
+  load_model: false 
+  save_model: false 
   model_path: "weights"
+  model_name: ""
