--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -110,8 +110,9 @@ renderer:
 dirs:
   frames: "frames"
 
-# Parameters to save the booster's neural network.
+# Save or load pre-trained neural network.
 checkpoints:
-  load_model: false
-  save_model: false
+  load_model: false 
+  save_model: false 
   model_path: "weights"
+  model_name: ""
