--- a/projects/genetic_optimization/config.yml
+++ b/projects/genetic_optimization/config.yml
@@ -1,13 +1,13 @@
 ##########################################
-# Configuration for genetic optimization #
+# Configuration for Genetic Optimization #
 ##########################################
 
-random_seed: 420
+random_seed: 42
 
 # Genetic optimization
 optimizer:
   num_boosters: 8
-  num_simulation_steps: 500
+  num_simulation_steps: 700
   mutation_probability: 0.02
   mutation_rate: 0.02
   lib: "numpy"
