--- a/projects/simulated_annealing/config.yml
+++ b/projects/simulated_annealing/config.yml
@@ -1,14 +1,14 @@
 #########################################
-# Configuration for simulated annealing #
+# Configuration for Simulated Annealing #
 #########################################
 
-random_seed: 420
+random_seed: 42
 
 # Simulated annealing
 optimizer:
   num_boosters: 4
+  num_simulation_steps: 700
   num_iterations: 50000  # Decrease temperature for `num_iterations`
-  num_simulation_steps: 500
   temp_initial: 0.06
   temp_final: 1.0e-6
   perturbation_probability_initial: 1.0
