--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -28,7 +28,7 @@ env:
     x_min: -150.0
     x_max: 150.0
     y_max: 450.0
-    y_min: -10.0
+    y_min: -5.0
 
   landing_pad:
     position: # [m]
@@ -108,6 +108,6 @@ dirs:
 # Save or load pre-trained neural network.
 checkpoints:
   load_model: false 
-  save_model: false 
+  save_model: true 
   model_path: "weights"
   model_name: ""
