--- a/projects/evolution_strategies/config.yml
+++ b/projects/evolution_strategies/config.yml
@@ -107,7 +107,7 @@ dirs:
 
 # Save or load pre-trained neural network.
 checkpoints:
-  load_model: true 
-  save_model: false 
+  load_model: false 
+  save_model: true 
   model_path: "weights"
-  model_name: "ckpt_es"
+  model_name: "es"
