--- a/projects/deep_q_learning/config.yml
+++ b/projects/deep_q_learning/config.yml
@@ -2,7 +2,7 @@
 # Configuration for (asynchronous) reinforcement learning #
 ###########################################################
 
-random_seed: 420
+random_seed: 42
 
 # Deep Q-Learning 
 optimizer:
@@ -59,7 +59,7 @@ env:
     init:
       position: # [m]
         x: 70.0
-        y: 350.0
+        y: 400.0
       linear_velocity: # [m / s]
         x: 0.0
         y: -50.0
@@ -83,9 +83,9 @@ env:
       type: "identical"
       position: # [m]
         x: 40.0
-        y: 20.0
+        y: 10.0
       linear_velocity: # [m / s]
-        x: 5.0
+        x: 0.0
         y: 5.0
       angular_velocity: 0.0  # [deg / s]
       angle: 0.0  # [deg]
@@ -118,6 +118,7 @@ dirs:
 # Save or load pre-trained neural network.
 checkpoints:
   load_model: false
-  save_model: false 
+  save_model: false
+  every_num_episodes: 1000
   model_path: "weights"
   model_name: ""
